--- a/nginx/nginx_rc.yml
+++ b/nginx/nginx_rc.yml
@@ -1,17 +1,18 @@
-apiVersion: v1beta3
+apiVersion: v1
 kind: ReplicationController
 # Указываем имя ReplicationController
 metadata:
-  name: nginx-controller
+  name: nginx
 spec:
   # Устанавливаем количество реплик
   replicas: 3 
   selector:
-    name: nginx
+    app: nginx
   template:
     metadata:
+      name: nginx
       labels:
-        name: nginx
+        app: nginx
     spec:
       containers:
         #Описываем контейнер
@@ -21,16 +22,3 @@ spec:
           ports:
             - containerPort: 80
             - containerPort: 443
-          livenessProbe:
-            # включаем проверку работоспособности
-            enabled: true
-            type: http
-            # Время ожидания после запуска pod'ы до момента начала проверок
-            initialDelaySeconds: 30
-            TimeoutSeconds: 5
-            # http проверка
-            httpGet:
-              path: /
-              port: 80
-      portals:
-        - destination: nginx
