--- a/nginx/nginx_dep.yml
+++ b/nginx/nginx_dep.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: my-nginx
 spec:
   replicas: 2 # tells deployment to run 2 pods matching the template
   template: # create pods using pod definition in this template
@@ -12,7 +12,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx:latest
+      - name: my-nginx
+        image: nginx
         ports:
         - containerPort: 80
