--- a/nginx/nginx_svc.yml
+++ b/nginx/nginx_svc.yml
@@ -1,14 +1,15 @@
-apiVersion: v1beta3
+apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: my-nginx
 spec:
 #  publicIPs: 
 #    - 12.0.0.5 # IP который будет присвоен сервису помимо автоматически назначенного.
+  type: NodePort
   ports:
     - name: http
       port: 80 #порт на котором будет слушать сервис
-      targetPort: 80 порт контейнера на который будет производиться трансляция запросов
+      targetPort: 80 #порт контейнера на который будет производиться трансляция запросов
       protocol: TCP
     - name: https
       port: 443
