--- a/glpi/glpi_sync.yaml
+++ b/glpi/glpi_sync.yaml
@@ -12,19 +12,7 @@ spec:
             app: glpi-sync
         spec:
           hostNetwork: true
+          restartPolicy: OnFailure
           containers:
           - name: glpi-sync
-            image: dockhost:5000/odbc-container
-            args:
-            - python3
-            - /usr/src/glpi_sync.py
-            volumeMounts:
-            - mountPath: /usr/src/
-              name: glpi-git-volume
-          restartPolicy: OnFailure
-          volumes:
-          - name: glpi-git-volume
-            gitRepo:
-              repository: "http://mitshel@gitlab.dsnet.ru/mitshel/glpi_sync.git"
-              #revision: "502404dd5fb1a6e4df34f53720d49ae324e82004"
-
+            image: dockhost:5000/glpi-sync
