--- a/sopds/sopds.yaml
+++ b/sopds/sopds.yaml
@@ -13,6 +13,7 @@ spec:
       containers:
       - name: sopds
         image: dockhost:5000/sopds
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8001
 ---
