--- a/glpi/nginx_dep.yaml
+++ b/glpi/nginx_dep.yaml
@@ -14,6 +14,7 @@ spec:
       containers:
       - name: nginx-sso
         image: dockhost:5000/nginx-sso
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
         volumeMounts:
